--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Smiley Top-Down</title>
+  <title>Smiley Game - Game Over + Score</title>
   <style>
     html, body {
       margin: 0;
@@ -39,23 +39,54 @@
       emoji: "😊"
     };
 
-    function movePlayer() {
-      if (keys["ArrowLeft"] || keys["a"]) {
-        player.x -= player.speed;
-      }
-      if (keys["ArrowRight"] || keys["d"]) {
-        player.x += player.speed;
-      }
+    const obstacles = [];
+    let score = 0;
+    let scoreTimer;
+    let gameOver = false;
 
-      // Automatisch naar boven
+    const centerCircle = {
+      x: canvas.width / 2,
+      y: canvas.height / 2,
+      radius: 50
+    };
+
+    function resetGame() {
+      obstacles.length = 0;
+      player.x = canvas.width / 2 - 20;
+      player.y = canvas.height - 60;
+      score = 0;
+      gameOver = false;
+      startScoreTimer();
+      gameLoop();
+    }
+
+    function startScoreTimer() {
+      clearInterval(scoreTimer);
+      scoreTimer = setInterval(() => {
+        if (!gameOver) score++;
+      }, 1000);
+    }
+
+    function spawnObstacle() {
+      const radius = Math.random() * 100 + 40;
+      const x = Math.random() * (canvas.width - radius * 2) + radius;
+      const y = Math.random() * (canvas.height / 2);
+      obstacles.push({ x, y, radius });
+    }
+
+    function movePlayer() {
+      if (keys["ArrowLeft"] || keys["a"]) player.x -= player.speed;
+      if (keys["ArrowRight"] || keys["d"]) player.x += player.speed;
+
       player.y -= player.verticalSpeed;
 
-      // Teleport naar onderaan als buiten scherm
       if (player.y + player.height < 0) {
         player.y = canvas.height;
+        player.x = Math.random() * (canvas.width - player.width);
+        const toSpawn = Math.floor(Math.random() * 2) + 1;
+        for (let i = 0; i < toSpawn; i++) spawnObstacle();
       }
 
-      // Links/rechts grenzen
       if (player.x < 0) player.x = 0;
       if (player.x + player.width > canvas.width)
         player.x = canvas.width - player.width;
@@ -68,16 +99,86 @@
       ctx.fillText(player.emoji, player.x + player.width / 2, player.y + player.height / 2);
     }
 
+    function drawObstacles() {
+      for (const o of obstacles) {
+        ctx.beginPath();
+        ctx.fillStyle = "red";
+        ctx.arc(o.x, o.y, o.radius, 0, Math.PI * 2);
+        ctx.fill();
+      }
+    }
+
+    function drawScoreCircle() {
+      ctx.beginPath();
+      ctx.fillStyle = "red";
+      ctx.arc(centerCircle.x, centerCircle.y, centerCircle.radius, 0, Math.PI * 2);
+      ctx.fill();
+
+      ctx.fillStyle = "white";
+      ctx.font = "24px Arial";
+      ctx.textAlign = "center";
+      ctx.textBaseline = "middle";
+      ctx.fillText(score, centerCircle.x, centerCircle.y);
+    }
+
+    function checkCollisionWithCircle(circle) {
+      const dx = (player.x + player.width / 2) - circle.x;
+      const dy = (player.y + player.height / 2) - circle.y;
+      const distance = Math.sqrt(dx * dx + dy * dy);
+      return distance < circle.radius + player.width / 2;
+    }
+
+    function checkCollisions() {
+      for (const o of obstacles) {
+        if (checkCollisionWithCircle(o)) return true;
+      }
+      if (checkCollisionWithCircle(centerCircle)) return true;
+      return false;
+    }
+
+    function showGameOver() {
+      ctx.fillStyle = "rgba(0,0,0,0.6)";
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+      ctx.fillStyle = "white";
+      ctx.font = "40px Arial";
+      ctx.textAlign = "center";
+      ctx.fillText("💀 Game Over", canvas.width / 2, canvas.height / 2 - 40);
+      ctx.font = "24px Arial";
+      ctx.fillText(`Score: ${score}`, canvas.width / 2, canvas.height / 2);
+      ctx.fillText("Druk op ENTER om opnieuw te spelen", canvas.width / 2, canvas.height / 2 + 40);
+    }
+
+    document.addEventListener("keydown", e => {
+      if (gameOver && e.key === "Enter") {
+        resetGame();
+      }
+    });
+
     function gameLoop() {
+      if (gameOver) {
+        showGameOver();
+        return;
+      }
+
       ctx.clearRect(0, 0, canvas.width, canvas.height);
 
       movePlayer();
+      if (checkCollisions()) {
+        gameOver = true;
+        clearInterval(scoreTimer);
+        showGameOver();
+        return;
+      }
+
+      drawObstacles();
+      drawScoreCircle();
       drawPlayer();
 
       requestAnimationFrame(gameLoop);
     }
 
-    gameLoop();
+    resetGame();
   </script>
 </body>
 </html>
